[gd_scene load_steps=11 format=3 uid="uid://c40k1762ncvl8"]

[ext_resource type="Script" path="res://scripts/platform.gd" id="1_j2q25"]
[ext_resource type="Texture2D" uid="uid://b2t2mxyd4i06v" path="res://assets/center_plat.png" id="2_spyyi"]

[sub_resource type="Curve2D" id="Curve2D_fbq2g"]
bake_interval = 1.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 88, 0, 0, 0, 0, 0, 28)
}
point_count = 2

[sub_resource type="Gradient" id="Gradient_m5hg1"]
offsets = PackedFloat32Array(0.0701107)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qxmvs"]
gradient = SubResource("Gradient_m5hg1")
width = 80
use_hdr = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4hx1"]
size = Vector2(80, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldp7e"]
size = Vector2(80, 4)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_e1oe4"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ygicg"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4hpef"]
polygon = PackedVector2Array(-39, -3, -39, 0.999996, 41, 0.999996, 41, -3)

[node name="Platform" type="Path2D"]
curve = SubResource("Curve2D_fbq2g")
script = ExtResource("1_j2q25")

[node name="PathFollow" type="PathFollow2D" parent="."]
position = Vector2(0, 88)
rotation = -1.5708
rotates = false
cubic_interp = false
loop = false

[node name="PlatformSprite" type="Sprite2D" parent="PathFollow"]
texture_filter = 1
position = Vector2(23, 1.00536e-06)
rotation = 1.5708
texture = ExtResource("2_spyyi")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "center_plat",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"player": "",
"slice": "",
"source": "res://aseprite/background.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true
}

[node name="ScoreArea" type="Area2D" parent="PathFollow"]
position = Vector2(23, 1.00536e-06)
rotation = 1.5708
collision_mask = 6

[node name="ProgressControl" type="Control" parent="PathFollow/ScoreArea"]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = 23.0
offset_right = 40.0
offset_bottom = 29.0

[node name="ProgressBarA" type="TextureProgressBar" parent="PathFollow/ScoreArea/ProgressControl"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.583333
anchor_right = 1.0
anchor_bottom = 0.75
offset_top = -0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 0
max_value = 1370.0
rounded = true
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_qxmvs")
tint_progress = Color(0, 0.372549, 0.831373, 0.627451)
metadata/_edit_use_anchors_ = true

[node name="ProgressBarB" type="TextureProgressBar" parent="PathFollow/ScoreArea/ProgressControl"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.583333
anchor_right = 1.0
anchor_bottom = 0.75
offset_top = -0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 0
max_value = 1370.0
rounded = true
fill_mode = 1
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_qxmvs")
tint_progress = Color(0.752941, 0.0705882, 1, 0.627451)
metadata/_edit_use_anchors_ = true

[node name="ScoreAreaCollision" type="CollisionShape2D" parent="PathFollow/ScoreArea"]
position = Vector2(8.28505e-05, -8.5)
shape = SubResource("RectangleShape2D_b4hx1")

[node name="PlatformStatic" type="AnimatableBody2D" parent="PathFollow"]
texture_filter = 1
position = Vector2(23, 1.00536e-06)
rotation = 1.5708
collision_mask = 2
constant_linear_velocity = Vector2(0, 1)
sync_to_physics = false

[node name="PlatformCollision" type="CollisionShape2D" parent="PathFollow/PlatformStatic"]
texture_filter = 3
position = Vector2(8.17776e-05, 27)
shape = SubResource("RectangleShape2D_ldp7e")

[node name="UfoLight" type="PointLight2D" parent="PathFollow"]
position = Vector2(25.9737, 0.119867)
rotation = 1.5708
scale = Vector2(1.11111, 3.11403)
color = Color(0.129412, 0.0196078, 0.133333, 0.372549)
energy = 0.0
shadow_enabled = true
shadow_filter_smooth = 64.0
texture = SubResource("PlaceholderTexture2D_e1oe4")
texture_scale = 18.0

[node name="PlatformLight" type="PointLight2D" parent="PathFollow"]
visible = false
position = Vector2(-3, -1.086e-05)
scale = Vector2(0.500025, 19.8899)
energy = 16.0
shadow_enabled = true
shadow_color = Color(0.0383972, 0.0383972, 0.0383972, 0)
texture = SubResource("PlaceholderTexture2D_ygicg")

[node name="LightOccluder" type="LightOccluder2D" parent="PathFollow"]
position = Vector2(-5, -1)
rotation = 1.5708
occluder = SubResource("OccluderPolygon2D_4hpef")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="PathFollow/ScoreArea" to="." method="_on_score_area_body_entered"]
[connection signal="body_exited" from="PathFollow/ScoreArea" to="." method="_on_score_area_body_exited"]
